--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -5,3 +5,4 @@ units:
     - The Art of Computer Programming Vol 1
     - The Art of Computer Programming Vol 2
     - The Art of Computer Programming Vol 3
+    - Subquadratic Algorithms for 3SUM
