add Linux Programming Interfaces book

--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -6,3 +6,4 @@ units:
     - The Art of Computer Programming Vol 2
     - The Art of Computer Programming Vol 3
     - Subquadratic Algorithms for 3SUM
+    - Linux Programming Interfaces
