add cs140, cs240 and related books

--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -7,3 +7,4 @@ units:
     - The Art of Computer Programming Vol 3
     - Subquadratic Algorithms for 3SUM
     - Linux Programming Interfaces
+    - Operating System Concepts 9th Edition
