add stanford courses summary and missing file

--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -8,3 +8,6 @@ units:
     - Subquadratic Algorithms for 3SUM
     - Linux Programming Interfaces
     - Operating System Concepts 9th Edition
+    - Programming Principles and Practice Using C++
+    - The C++ Programming Language 4th
+    - Stanford Computer Science courses summary
