--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -11,3 +11,4 @@ units:
     - Programming Principles and Practice Using C++
     - The C++ Programming Language 4th
     - Stanford Computer Science courses summary
+    - ISO IEC 9899:2011 - C Programming Lanuage
