--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -14,3 +14,4 @@ units:
         - ISO IEC 9899:2011 - C Programming Lanuage
         - Expert C Programming 
         - Modern C
+        - Compilers - Principles, Technique and Tools
