--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -15,3 +15,4 @@ units:
         - Expert C Programming 
         - Modern C
         - Compilers - Principles, Technique and Tools
+        - Introduction to the Theory of Computation 3rd
