add Parsing Technique 2nd book

--- a/src/course/book/index.yaml
+++ b/src/course/book/index.yaml
@@ -16,3 +16,4 @@ units:
         - Modern C
         - Compilers - Principles, Technique and Tools
         - Introduction to the Theory of Computation 3rd
+        - Parsing Techniques 2nd 
